[package]
name = "wasm-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = { version = "=0.37.0", default-features = true }
wasmtime-cli-flags = { version = "=0.37.0", default-features = true }
wasmtime-wasi = "=0.37.0"
wasi-common = "=0.37.0"
target-lexicon = "0.12.4"
anyhow = "1.0.57"
precision = "0.1.14"
cap-std = "0.24.4"
structopt = "0.3.26"
env_logger = "0.9.0"
log = "0.4.17"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "main"
harness = false
