[package]
name = "wasm-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = { version = "=4.0.1", default-features = true }
wasmtime-cli-flags = { version = "=2.0.2", default-features = true }
wasmtime-wasi = "=2.0.2"
wasi-common = "=2.0.2"
target-lexicon = "0.12.4"
anyhow = "1.0.57"
precision = "0.1.14"
cap-std = "0.26.0"
structopt = "0.3.26"
env_logger = "0.9.0"
log = "0.4.17"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "main"
harness = false
